# puffin

./: Cargo.toml  LICENSE  README.md  build.rs
disk/: index_1  index_1_skip
puffin-index/: Cargo.toml
puffin-index/src/: lib.rs  ngram.rs
puffin-query/: Cargo.toml
puffin-query/src/: query.pest  query.rs
search/: Cargo.toml
search/src/: main.rs
src/: main.rs  ngram.rs  query.pest  query.rs  search.proto
sstable/: Cargo.toml  README.md
sstable/src/: disktable.rs  lib.rs  memtable.rs  rich_file.rs
sstable/src/disktable/: byte_utils.rs  data_file.rs  index_file.rs
