[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Matouš Dzivjak <matousdzivjak@gmail.com>"]
categories = ["code-search"]
repository = "https://github.com/matoous/puffin"
homepage = "https://github.com/matoous/puffin"
license = "MPL-2.0"
rust-version = "1.70"

[workspace]
resolver = "2"
members = [
  "puffin-index",
  "puffin-query",
  "search",
  "sstable",
]

default-members = [
  "search"
]

[profile.release]
debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
