[package]
name = "search"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
env_logger = "0.10.1"
ignore = "0.4.20"
lazy_static = "1.4.0"
log = "0.4.20"
prost = "0.12.1"
prost-build = "0.12.1"
regex = "1.9.6"
puffin-index = { path = "../puffin-index" }
puffin-query = { path = "../puffin-query" }
